# tech_blog

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yaml  pyproject.toml  sitemap.xml
basics/classification/: index.html
basics/data/: index.html
basics/eda/: index.html
basics/ensemble/: index.html
basics/regression/: index.html
basics/statistical_tests/: index.html
docs/: index.md
docs/basics/: classification.md  data.md  eda.md  ensemble.md  regression.md  statistical_tests.md
docs/linear_models/: lda.md  linear_classification.md  linear_regression.md  regularization.md
docs/other_models/: hierarchical_clustering.md  k_means.md  knn.md  naive_bayes.md  pca.md  svm.md
docs/trees/: decision_trees.md  gradient_boosted_trees.md  random_forest.md
linear_models/lda/: index.html
linear_models/linear_classification/: index.html
linear_models/linear_regression/: index.html
linear_models/regularization/: index.html
machine_learning/basics/classification/: index.html
machine_learning/basics/data/: index.html
machine_learning/glossary/: index.html
other_models/hierarchical_clustering/: index.html
other_models/k_means/: index.html
other_models/knn/: index.html
other_models/naive_bayes/: index.html
other_models/pca/: index.html
other_models/svm/: index.html
python/classes/: index.html
python/exceptions/: index.html
python/functions/: index.html
search/: search_index.json
trees/decision_trees/: index.html
trees/gradient_boosted_trees/: index.html
trees/random_forest/: index.html
(+17 files in other folders)
